[package]
name        = "ban-engine"
version     = "0.1.0"
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
publish.workspace      = true
description = "Horkos ban engine. Rule cache + signed-bundle deserializer skeleton. Ed25519 verification lands under /tdd in a follow-up phase."

[features]
default = []
# Compiles a placeholder bundle verifier that ALWAYS fails closed unless this
# feature is on. CI rejects this feature on release branches.
# The dev-only placeholder additionally panics in --release builds via a
# compile_error! check so a release artifact cannot accept unverified bundles.
unverified_bundles_dev_only = []

[lib]
name = "ban_engine"
path = "src/lib.rs"

[dependencies]
axum          = { workspace = true }
ed25519-dalek = { workspace = true }
hex           = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
thiserror     = { workspace = true }
time          = { workspace = true }
tokio         = { workspace = true }
tracing       = { workspace = true }
# The aim-kinematics segmenters (signals 166-169) consume the per-tick aim-
# feature block defined on telemetry's `TickPayload`. No cycle: telemetry does
# not depend on ban-engine.
telemetry  = { path = "../telemetry" }

[dev-dependencies]
http           = { workspace = true }
http-body-util = { workspace = true }
tokio          = { workspace = true }
tower          = { workspace = true }

# fusion/pipeline merge-gate bypass tests (guardrail #12). Live under
# `bypass-tests/server/` with the other domains' bypass tests; registered here
# so `cargo test -p ban-engine` (the server CI gate) runs them. Pure Rust,
# fixture-driven, no game-server peer.
[[test]]
name = "fusion_bypass"
path = "../../bypass-tests/server/fusion_bypass.rs"

[[test]]
name = "bundle_bypass"
path = "../../bypass-tests/server/bundle_bypass.rs"
