[package]
name        = "license-server"
version     = "0.1.0"
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
publish.workspace      = true
description = "Horkos licence lifecycle routes — issue / revoke / verify. Phase 2: typed 501 stubs that flip to real handlers under /tdd."

[lib]
name = "license_server"
path = "src/lib.rs"

[dependencies]
axum          = { workspace = true }
ed25519-dalek = { workspace = true }
hex           = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
thiserror     = { workspace = true }
tracing       = { workspace = true }

[dev-dependencies]
http           = { workspace = true }
http-body-util = { workspace = true }
tokio          = { workspace = true }
tower          = { workspace = true }
