[package]
name        = "telemetry"
version     = "0.1.0"
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
publish.workspace      = true
description = "Horkos telemetry ingest. Phase 2: route stub + ort dependency proof. Real ingest path lands in a /tdd phase."

[features]
# behavioral-gamestate domain. `gamestate-analyzers` (default ON) compiles the
# snapshot model, analyzers, geom and stats — pure userspace Rust that builds with no
# game-server peer. `gamestate-ipc-shm` (default ON) additionally compiles the live
# shm reader + its platform backends; turn it OFF to build/test against file-backed
# fixtures only (CI has no game-server peer). ipc-shm implies the analyzers.
default            = ["gamestate-analyzers", "gamestate-ipc-shm"]
gamestate-analyzers = ["dep:rustfft"]
gamestate-ipc-shm   = ["gamestate-analyzers", "dep:libc"]

[dependencies]
axum       = { workspace = true }
tokio      = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }
tracing    = { workspace = true }

# ort is added as a dependency to confirm it builds on the target host.
# No model is loaded in Phase 2.
ort        = { workspace = true }

# behavioral-gamestate domain deps (see server/Cargo.toml for the rationale).
rustfft    = { workspace = true, optional = true }

# Live shm reader backend (gamestate-ipc-shm); platform-gated.
[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
libc       = { workspace = true, optional = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true, optional = true }
